--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.16.4",
+        "mongodb": "^3.5.9",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1"
