--- a/app/package.json
+++ b/app/package.json
@@ -15,12 +15,12 @@
     "author": "Rajiv, Madhav, Ethan, Rui, Simon",
     "license": "ISC",
     "dependencies": {
+        "@soundtouchjs/audio-worklet": "^0.1.5",
         "express": "^4.16.4",
         "mongodb": "^3.5.9",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
-        "react-dom": "^16.13.1",
-        "soundtouchjs": "^0.1.21"
+        "react-dom": "^16.13.1"
     },
     "engines": {
         "node": ">=4.3.2"
@@ -39,6 +39,7 @@
         "babel-eslint": "^10.1.0",
         "babel-jest": "^26.0.1",
         "babel-loader": "^8.1.0",
+        "core-js": "^3.6.5",
         "css-loader": "^3.6.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
@@ -51,6 +52,7 @@
         "jest": "^26.0.1",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "regenerator-runtime": "^0.13.5",
         "style-loader": "^1.2.1",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^4.1.0",
