--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,14 @@
     "license": "ISC",
     "dependencies": {
         "@soundtouchjs/audio-worklet": "^0.1.5",
-        "express": "^4.16.4",
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.9",
+        "mongoose": "^5.9.22",
+        "nodemon": "^2.0.4",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1"
