--- a/app/package.json
+++ b/app/package.json
@@ -74,6 +74,7 @@
         "webpack-cli": "^3.3.12",
         "webpack-dev-middleware": "^3.7.2",
         "webpack-hot-middleware": "^2.25.0",
-        "webpack-node-externals": "^1.7.2"
+        "webpack-node-externals": "^1.7.2",
+        "worklet-loader": "^1.0.0"
     }
 }
