--- a/app/package.json
+++ b/app/package.json
@@ -66,6 +66,7 @@
         "jest": "^26.0.1",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "react-keyboard-shortcuts": "^1.1.3",
         "regenerator-runtime": "^0.13.5",
         "style-loader": "^1.2.1",
         "uglifyjs-webpack-plugin": "^2.2.0",
